@@ -1,7 +1,7 @@
 notmuch (0.16-1) unstable; urgency=low
 
-  * The vim interface is no longer provided as a Debian package, due
-    to upstream deprecation.
+  * The vim interface has been rewritten from scratch. In particular
+    it requires a version of vim with ruby support.
 
  -- David Bremner <bremner@debian.org>  Sat, 16 Feb 2013 08:12:02 -0400
 
