@@ -1,3 +1,3 @@
-vim/plugin/notmuch.vim usr/share/vim/addons/plugin
+vim/notmuch.vim usr/share/vim/addons/plugin
 vim/syntax/notmuch-*.vim usr/share/vim/addons/syntax
 vim/notmuch.yaml usr/share/vim/registry
